# RivalRadar

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DATA_SOURCES.md  DESIGN.md  README.md  SKILLS.md  TESTING.md  TODOS.md  main.py  pyproject.toml
.claude/: settings.json
frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
references/: README.md  ref-01-woshipm-feishu-dingding-qiwei.md  ref-02-36kr-dingding-vs-feishu-5years.md  ref-03-woshipm-shimo-tencent-kingsoft.md
rivalradar/: config.py  evals.py
spikes/: SPIKE_RESULTS.md  spike_a_doubao_schema.py  spike_b_search_extract.py  spike_c_collect_integration.py  spike_curate_realrun.py  spike_d_analyze_real.py  spike_e_report_qc_real.py  spike_evals_judge.py  spike_f_graph_real.py  spike_g_api_real_doubao.py
tests/: test_analyst_agent.py  test_api_annotations.py  test_api_app.py  test_api_cancel.py  test_api_concurrent.py  test_api_reads.py  test_api_runs.py  test_api_sse.py  test_checkpointer.py  test_collect_pipeline.py  test_collector_agent.py  test_config.py  test_db.py  test_discover.py  test_doubao_schema.py  test_evals.py  test_evidence_builder.py  test_exa_provider.py  test_fallback.py  test_feature_tree.py  test_fetch.py  test_graph_build.py  test_graph_loop.py  test_graph_nodes.py  test_graph_router.py  test_graph_state.py  test_models.py  test_policy.py  test_qc_agent.py  test_queries.py  test_repository.py  test_search_base.py  test_sse_emit.py  test_streaming.py  test_structured_call.py  (+2 more)
(+117 files in other folders)
