[project]
name = "rivalradar"
version = "0.1.0"
description = "AI 多 Agent 竞品分析协作系统"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "python-dotenv>=1.0",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
